Add a Sports category icon

--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -42,7 +42,7 @@
         <item>Work</item>
         <item>School</item>
         <item>Hobby</item>
-        <item>Housework</item>
+        <item>Sport</item>
         <item>Other</item>
     </string-array>
 </resources>
