--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -38,6 +38,10 @@
         <item>Add Note</item>
         <item>Delete</item>
     </string-array>
+    <string-array name="project_actions">
+        <item>Edit</item>
+        <item>Delete</item>
+    </string-array>
     <string-array name="project_categories">
         <item>Work</item>
         <item>School</item>
