--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="no_projects">Congratulations, you have nothing to do!</string>
     <string name="add_project">New project</string>
     <string name="add_task">New task</string>
-    <string name="add_task_name">New task name</string>
+    <string name="add_task_name">Task name</string>
+    <string name="add_note_text">Note text</string>
     <string name="project_name">Project name</string>
     <string name="project_description">Project description</string>
     <string name="project_client">Client</string>
@@ -29,6 +30,9 @@
     <string name="project_category">Category</string>
     <string name="settings">Settings</string>
     <string name="note_add">Add Note</string>
+    
+    <string name="task_start">Start</string>
+    <string name="task_stop">Stop</string>
     
     <string name="permission_write">Edit Projects and Tasks</string>
     <string name="permission_write_description">Allows the application to modify all nTasks data</string>
@@ -47,6 +51,7 @@
     </string-array>
     <string-array name="project_actions">
         <item>Edit</item>
+        <item>Change Icon</item>"
         <item>Delete</item>
     </string-array>
     <string-array name="project_categories">
@@ -55,5 +60,9 @@
         <item>Hobby</item>
         <item>Sport</item>
         <item>Other</item>
+    </string-array>
+    <string-array name="icon_sources">
+        <item>From Camera</item>
+        <item>From Gallery</item>
     </string-array>
 </resources>
